--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.0.0-beta.3"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mikhail-wd/webinar.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/Mikhail-wd/webinar/issues"
+  },
+  "homepage": "https://github.com/Mikhail-wd/webinar#readme"
 }
